recursion.lessons.recursion.tree.Tree.scala.error
Tree:9: error: not found: value doite
		doite(2*angle);
                ^